--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -1,22 +1,37 @@
-.TodoList {
+.Todo {
     width: 400px;
     padding: 10px;
     border: 1px solid black;
 }
 
-.TodoList__item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.Todo__form {
     padding: 20px;
     border: 1px solid black;
 }
 
-.TodoList__text{
+.Todo__input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Todo__list {
+    padding: 20px;
+    border: 1px solid black;
+}
+
+.Todo__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.Todo__text {
     margin-top: 0;
     margin-bottom: 0;
 }
 
-.TodoList__button{
+.Todo__button {
     cursor: pointer;
 }
